--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-Guestbook/war/
+./Guestbook/war/WEB-INF/appengine-generated/
